--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.35.1",
+    "@vkontakte/vkui": "^6.1.1",
     "axios": "^1.6.8",
     "mobx": "^6.12.3",
     "mobx-react": "^9.1.1",
